--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,16 @@
         "baseUrl": ".",
         "paths": {
             "@/*": [
-                "./src/*"
+                "./*"
             ]
         }
     },
     "include": [
-        "src"
+        "src",
+        "components",
+        "data",
+        "hooks",
+        "utils"
     ],
     "references": [
         {
