--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/three": "^0.160.0",
